# gvthread

./: .gitignore  Cargo.toml  Cargo.toml.patch  INTEGRATION.md  Makefile  Makefile.ksvc  README.md
benches/: bench-runner.md  bench-runner.py
benches/httpd/: manifest.yml
cmd/basic/: Cargo.toml
cmd/basic/src/: main.rs
cmd/benchmark/: Cargo.toml
cmd/channel/: Cargo.toml
cmd/channel/src/: main.rs
cmd/echo/: echo-plugin.py
cmd/echo/go/: go.mod  main.go
cmd/echo/rust/ksvc/: bench.md  readme.md
cmd/go-httpd/: main.go
cmd/gvt/basic/src/: main.rs
cmd/gvt/benchmark/src/: main.rs
cmd/gvt/playground/: Cargo.toml  gvt_config.rs
cmd/gvt/preemption/: Cargo.toml
cmd/gvt/stress/: Cargo.toml
cmd/httpd/: httpd-plugin.py
cmd/httpd/go/: go.mod  main.go
cmd/httpd/rust/gvthread/: Cargo.toml
cmd/httpd/rust/gvthread/src/: main.rs
cmd/httpd/rust/gvthread0/: Cargo.toml
cmd/httpd/rust/gvthread0/src/: main.rs
cmd/httpd/rust/gvthread1/: Cargo.toml
cmd/httpd/rust/gvthread1/src/: main.rs
cmd/httpd/rust/ksvc/: Cargo.toml
cmd/httpd/rust/ksvc/src/: main.rs
cmd/httpd/rust/tokio/src/: main.rs
cmd/ksvc-echo/: Cargo.toml  bench_compare.py  test_echo.py
cmd/ksvc-echo/src/: main.rs
cmd/ksvc-httpd/src/: main.rs
cmd/ksvc-smoke/: Cargo.toml
cmd/ksvc-smoke/src/: main.rs
cmd/playground/: Cargo.toml
cmd/playground/src/: main.rs
cmd/preemption/src/: main.rs
cmd/smoke/: smoke-plugin.py
cmd/smoke/ksvc/: smoke-plugin.py
cmd/smoke/ksvc/src/: main.rs
cmd/stress/src/: main.rs
cmd/tokio-echo/: Cargo.toml
cmd/tokio-echo/src/: main.rs
cmd/tokio-httpd/: Cargo.toml
cmd/wrkr/rust/wrkr/: Cargo.toml  readme.md
cmd/wrkr/rust/wrkr/src/: main.rs
crates/gerror/: Cargo.toml  readme.md
crates/gerror/src/: context.rs  convert.rs  error.rs  id.rs  lib.rs  macros.rs  metrics.rs  site.rs
crates/gerror/src/codes/: convert.rs  errno.rs  error.rs  gvthread.rs  mod.rs  ops.rs  os.rs
crates/gvthread/: Cargo.toml
crates/gvthread-core/: Cargo.toml
crates/gvthread-core/src/: bitmap.rs  cancel.rs  channel.rs  env.rs  error.rs  id.rs  kprint.rs  lib.rs  metadata.rs  mutex.rs  slot.rs  spinlock.rs  state.rs  traits.rs
crates/gvthread-runtime/: Cargo.toml  build.rs
crates/gvthread-runtime/src/: config.rs  lib.rs  platform_linux.rs  scheduler.rs  timer.rs  tls.rs  worker.rs
crates/gvthread-runtime/src/arch/: mod.rs
crates/gvthread-runtime/src/arch/aarch64/: mod.rs
crates/gvthread-runtime/src/arch/x86_64/: mod.rs
crates/gvthread-runtime/src/config/: README.md  defaults.rs  mod.rs
crates/gvthread-runtime/src/memory/: mod.rs  unix.rs
crates/gvthread-runtime/src/parking/: fallback.rs  futex_linux.rs  mod.rs
crates/gvthread-runtime/src/ready_queue/: mod.rs  readme.md  simple.rs
crates/gvthread-runtime/src/signal/: mod.rs  unix.rs
crates/gvthread-runtime/src/timer/: entry.rs  example_use.md  mod.rs  registry.rs  worker.rs
crates/gvthread-runtime/src/timer/impls/: heap.rs  mod.rs
crates/gvthread/src/: lib.rs
crates/ksvc-core/: Cargo.toml
crates/ksvc-core/src/: buffer.rs  completion.rs  entry.rs  error.rs  io_backend.rs  lib.rs  notifier.rs  router.rs  shared_page.rs  tier.rs  worker.rs
crates/ksvc-executor/: Cargo.toml
crates/ksvc-executor/src/: lib.rs
crates/ksvc-gvthread/: Cargo.toml
crates/ksvc-gvthread/src/: lib.rs  net.rs  reactor.rs  syscall.rs  worker_reactor.rs
crates/ksvc-module/: Cargo.toml
crates/ksvc-module/src/: basic_iouring.rs  eventfd_notifier.rs  fixed_pool.rs  heap_buffers.rs  instance.rs  ksvc_sys.rs  lib.rs  mmap_shared_page.rs  probe_router.rs  ring_completion.rs  submit_ring.rs
docs/: ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  KSVC_GVTHREAD.md  TODO.md  TRAIT_MAP.md  ksvc-gvthread-integration.md  rust-install.md
docs/bugs/: bug-1.md  gvt-httpd-bug1.md
docs/chat/: gvt-1.md  gvt-2.md
docs/debug/: coredump.md
docs/utils/: rust_compile.md
itests/: result_schema.py  test-runner.py
kmod/: Makefile  README.md  dkms.conf  ksvc_internal.h  ksvc_main.c  ksvc_ring.c  ksvc_shared.c  ksvc_uapi.h
kmod/test/: test_basic  test_basic.c
makefiles/: INSTALL.md  README.md  bench.mk  build.mk  clean.mk  itest.mk  make_completion_bash.sh  perf.mk
other/go/playground1/: main.go
results/: .gitignore
scripts/: README.md  coredump.sh  dev.sh  gitlogin.sh  makehelper.py  setup-ubuntu.sh  sync-to-vm.sh  verify-env.sh
