[workspace]
resolver = "2"

members = [
    # Core crates
    "crates/*",
    "cmd/*/rust/*",
    "cmd/gvt/*",
    "cmd/smoke/*",


]

exclude = [
    # Python bytecode dirs that glob patterns might match
    "cmd/smoke/__pycache__",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["GssMahadevan"]
license = "MIT"
repository = "https://github.com/gssmahadevan/gvthread"
keywords = ["async", "threading", "scheduler", "Generic-threads", "concurrency"]
categories = ["concurrency", "asynchronous"]
rust-version = "1.79"  # Required for naked_asm! (stabilized in 1.79)

[workspace.dependencies]
# Internal crates
gvthread-core = { path = "crates/gvthread-core" }
gvthread-runtime = { path = "crates/gvthread-runtime" }
gvthread = { path = "crates/gvthread" }

# Internal — KSVC
ksvc-core = { path = "crates/ksvc-core" }
ksvc-module = { path = "crates/ksvc-module" }
ksvc-executor = { path = "crates/ksvc-executor" }

# External dependencies (shared versions)
libc = "0.2"
cfg-if = "1.0"
nix = { version = "0.29", features = ["signal", "pthread", "mman", "fs", "event", "ioctl"] }
io-uring = "0.7"
crossbeam-queue = "0.3"

# Build dependencies
cc = "1.0"

# Dev/test dependencies
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.bench]
opt-level = 3
debug = false