[package]
name = "tokio-httpd"
description = "HTTP/1.1 server — idiomatic Tokio, for comparison with ksvc-httpd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tokio-httpd"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
