[package]
name = "gvthread-runtime"
description = "Platform-specific runtime for GVThread scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
gvthread-core.workspace = true
libc.workspace = true
cfg-if.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[target.'cfg(windows)'.dependencies]
# windows-sys = { version = "0.52", features = ["Win32_System_Memory", "Win32_System_Threading"] }

[build-dependencies]
cc.workspace = true

[features]
default = []
io-uring = []
debug-logging = []
