[package]
name = "ksvc-httpd"
description = "HTTP/1.1 server — single-threaded io_uring via KSVC Tier 1"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ksvc-httpd"
path = "src/main.rs"

[dependencies]
ksvc-core = { workspace = true }
ksvc-module = { workspace = true }
libc = { workspace = true }
