[package]
name = "wrkr"
version = "0.1.0"
edition = "2021"
description = "Benchmark load generator with pluggable protocol strategies"

[[bin]]
name = "wrkr"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Strategy: reqwest — application-grade HTTP client (easy HTTPS, cookies, redirects)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Strategy: hyper — bare HTTP engine (zero overhead, connection-level control)
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
http-body-util = "0.1"

# gRPC — future (uncomment when needed)
# tonic = "0.12"
# prost = "0.13"

[profile.release]
opt-level = 3
lto = "thin"